--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .idea/dictionaries
 
 # Sensitive or high-churn files:
+.idea/
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.xml
@@ -58,7 +59,7 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
+ *.iml
 # modules.xml
 # .idea/misc.xml
 # *.ipr
